force-app/main/default/objects/Supervisor_Promoter_Attendance__c/Supervisor_Promoter_Attendance__c.object-meta.xml
<CustomObject>
    <label>Supervisor &amp; Promoter &amp; Attendance</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Supervisor &amp; Promoter &amp; Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supervisor &amp; Promoter &amp; Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>