force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance</label>
    <referenceTo>Promoter_Attendance__c</referenceTo>
    <relationshipName>Supervisor_Promoter_Attandance_del</relationshipName>
    <type>Lookup</type>
</CustomField>