force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Check_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Status__c</fullName>
    <label>Check-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Check_in_out_Status</valueSetName>
    </valueSet>
</CustomField>