force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Have_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Have_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Attendance</label>
    <type>Checkbox</type>
</CustomField>