force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supervisor_Promoter_Attandance</relationshipName>
    <type>Lookup</type>
</CustomField>