force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Statistical_Date__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Date__c</fullName>
    <label>Statistical Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>