force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Sum_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Sum_Attendance__c</fullName>
    <formula>IF(  ISPICKVAL( Attendance__r.CheckInStatus__c , &apos;已签到签退&apos;)  , 1, 0)</formula>
    <label>*Sum Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>