force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Sum_Early_Check_out__c.field-meta.xml
<CustomField>
    <fullName>Sum_Early_Check_out__c</fullName>
    <formula>IF(   ISPICKVAL( Attendance__r.Check_out_Status__c , &apos;Early Check out&apos;) , 1, 0)</formula>
    <label>*Sum Early Check out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>