force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Sum_Promoter__c.field-meta.xml
<CustomField>
    <fullName>Sum_Promoter__c</fullName>
    <formula>1</formula>
    <label>*Sum Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>