force-app/main/default/objects/Supervisor_Promoter_Attendance__c/fields/Supervisor_Store__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Store__c</fullName>
    <label>Supervisor &amp; Store</label>
    <referenceTo>Supervisor_Store__c</referenceTo>
    <relationshipName>Supervisor_Promoter</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>